cabal-version:      3.0
name:               zoo
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
-- author:
-- maintainer:
-- copyright:
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.15.1.0
    hs-source-dirs:   lib
    default-language: Haskell2010

executable np-yandex
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
      base ^>=4.15.1.0, zoo
      , async
      , text
      , containers
      , bytestring
      , filepath
      , directory
      , filepattern


    hs-source-dirs:   np-yandex
    default-language: Haskell2010
