cabal-version:      3.0
name:               zoo
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
-- author:
-- maintainer:
-- copyright:
category:           System
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common shared-stuff

  ghc-options:         -Wall -fno-warn-unused-do-bind
  default-language:    Haskell2010

  default-extensions:
                       ApplicativeDo
                     , BangPatterns
                     , BlockArguments
                     , ConstraintKinds
                     , DataKinds
                     , DeriveDataTypeable
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveTraversable
                     , DerivingStrategies
                     , DerivingVia
                     , EmptyDataDecls
                     , EmptyDataDeriving
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , ImportQualifiedPost
                     , InstanceSigs
                     , LambdaCase
                     , MultiParamTypeClasses
                     , MultiWayIf
                     , OverloadedLabels
                     , OverloadedStrings
                     , PatternSynonyms
                     , QuasiQuotes
                     , RankNTypes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeOperators
                     , ViewPatterns


  build-depends:
    base >=4.15.1.0
    , async
    , bytestring
    , cache
    , containers
    , curl
    , clock
    , directory
    , download-curl
    , filepath
    , filepattern
    , hinotify
    , interpolatedstring-perl6
    , json-stream
    , mtl
    , prettyprinter
    , safe
    , stm
    , streaming
    , text
    , time
    , timestamp
    , typed-process
    , uniplate
    , microlens-platform



library
    import:           shared-stuff
    exposed-modules:  Zoo.Prelude
                    , Zoo.YandexMusic
                    , Zoo.Clock
                    , Zoo.Files

    -- other-modules:
    -- other-extensions:
    hs-source-dirs:   lib
    default-language: Haskell2010

executable np-yandex
    import:           shared-stuff

    ghc-options:
      -O2
      -threaded
      -rtsopts
      -- "-with-rtsopts=-N4 -A64m -AL256m -I0"
      "-with-rtsopts=-N4 -M64M"

    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:

    build-depends: zoo

    hs-source-dirs:   np-yandex
    default-language: Haskell2010


executable np-yandex-ctl
    import:           shared-stuff

    ghc-options:
      -O2
      -threaded
      -rtsopts
      -- "-with-rtsopts=-N4 -A64m -AL256m -I0"
      "-with-rtsopts=-N4 -M64M"

    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:

    build-depends: zoo

    hs-source-dirs:   np-yandex-ctl
    default-language: Haskell2010

